# FUEL

./: .gitignore  README.md  REMEAD.md
fuel_planner/: log.md  traj_backup.cpp
fuel_planner/active_perception/: CMakeLists.txt  package.xml
fuel_planner/active_perception/include/active_perception/: frontier_finder.h  graph_node.h  graph_search.h  heading_planner.h  perception_utils.h  traj_visibility.h
fuel_planner/active_perception/script/: calc_fov.py
fuel_planner/active_perception/src/: frontier_finder.cpp  graph_node.cpp  heading_planner.cpp  perception_utils.cpp  traj_visibility.cpp
fuel_planner/bag/: debug_record.sh  explore_record.sh
fuel_planner/bspline/: CMakeLists.txt  package.xml
fuel_planner/bspline/include/bspline/: non_uniform_bspline.h
fuel_planner/bspline/src/: non_uniform_bspline.cpp
fuel_planner/bspline_opt/: CMakeLists.txt  package.xml
fuel_planner/bspline_opt/include/bspline_opt/: bspline_optimizer.h
fuel_planner/bspline_opt/src/: bspline_optimizer.cpp
fuel_planner/exploration_manager/: CMakeLists.txt  package.xml
fuel_planner/exploration_manager/config/: traj.rviz
fuel_planner/exploration_manager/include/exploration_manager/: expl_data.h  fast_exploration_fsm.h  fast_exploration_manager.h
fuel_planner/exploration_manager/launch/: alg_bag.xml  alg_ral21.xml  algorithm.xml  exp_bag.launch  exp_ral21.launch  exploration.launch  rviz.launch  simulator.xml  test_world.launch
fuel_planner/exploration_manager/resource/: curve1.txt
fuel_planner/exploration_manager/script/: calc_bridge_time.py  calc_maze_time.py  ral_icra21.py
fuel_planner/exploration_manager/src/: exploration_node.cpp  fast_exploration_fsm.cpp  fast_exploration_manager.cpp
fuel_planner/exploration_manager/test/: load_obj.cpp  test.md  write_tsp.cpp
fuel_planner/path_searching/: CMakeLists.txt
fuel_planner/path_searching/include/path_searching/: astar.h  (+5 more)
fuel_planner/path_searching/src/: astar.cpp  astar2.cpp  kinodynamic_astar.cpp  topo_prm.cpp
fuel_planner/plan_env/: CMakeLists.txt
fuel_planner/plan_env/src/: edt_environment.cpp  map_ros.cpp  raycast.cpp  sdf_map.cpp
fuel_planner/plan_manage/: CMakeLists.txt  package.xml
fuel_planner/plan_manage/config/: traj.rviz
fuel_planner/plan_manage/include/plan_manage/: kino_replan_fsm.h  local_explore_fsm.h  plan_container.hpp  planner_manager.h  topo_replan_fsm.h  utils.h
fuel_planner/plan_manage/launch/: kino_algorithm.xml  kino_replan.launch  simulator.xml  topo_algorithm.xml  topo_replan.launch
fuel_planner/plan_manage/launch/icra20/: compare_topo.launch  exp_icra20.launch
fuel_planner/plan_manage/launch/tro20/: experiment.launch  local_explore.launch  local_explore_alg.xml  rviz_exp.launch  simulator.launch  simulator2.launch
fuel_planner/plan_manage/src/: fast_planner_node.cpp  kino_replan_fsm.cpp  planner_manager.cpp  planner_manager_dev.cpp  topo_replan_fsm.cpp  traj_server.cpp  traj_server_backup.cpp
fuel_planner/plan_manage/test/: compare_topo.cpp  local_explore_fsm.cpp  process_msg.cpp  process_msg2.cpp  rotation.cpp  test_collision_cost.cpp
fuel_planner/poly_traj/: CMakeLists.txt
fuel_planner/poly_traj/src/: polynomial_traj.cpp
fuel_planner/traj_utils/: CMakeLists.txt
fuel_planner/traj_utils/include/traj_utils/: planning_visualization.h
fuel_planner/traj_utils/src/: planning_visualization.cpp  process_msg.cpp
fuel_planner/utils/: record.sh
fuel_planner/utils/backward/: backward.hpp
fuel_planner/utils/lkh_tsp_solver/: CMakeLists.txt  package.xml
fuel_planner/utils/lkh_tsp_solver/include/: Delaunay.h  GainType.h  Genetic.h  GeoConversion.h  Hashing.h  Heap.h  LKH.h  Segment.h  Sequence.h  gpx.h
fuel_planner/utils/lkh_tsp_solver/include/lkh_tsp_solver/: lkh_interface.h
fuel_planner/utils/lkh_tsp_solver/resource/: single.par  single.tsp  single.txt  test.par  test.tsp  test.txt
fuel_planner/utils/lkh_tsp_solver/src/: Activate.c  AddCandidate.c  AddExtraCandidates.c  AddTourCandidates.c  AdjustCandidateSet.c  AdjustClusters.c  AllocateStructures.c  Ascent.c  Best2OptMove.c  Best3OptMove.c  Best4OptMove.c  Best5OptMove.c  BestKOptMove.c  Between.c  Between_SL.c  Between_SSL.c  BridgeGain.c  BuildKDTree.c  C.c  CandidateReport.c  ChooseInitialTour.c  Connect.c  CreateCandidateSet.c  CreateDelaunayCandidateSet.c  CreateNNCandidateSet.c  CreateQuadrantCandidateSet.c  Create_POPMUSIC_CandidateSet.c  Delaunay.c  Distance.c  Distance_SPECIAL.c  ERXT.c  Excludable.c  Exclude.c  FindTour.c  FixedOrCommonCandidates.c  Flip.c  Flip_SL.c  Flip_SSL.c  Forbidden.c  FreeStructures.c  (+67 more)
uav_simulator/Utils/multi_map_server/: CMakeLists.txt
uav_simulator/Utils/multi_map_server/include/multi_map_server/: Map2D.h  Map3D.h
uav_simulator/Utils/multi_map_server/msg_gen/cpp/include/multi_map_server/: MultiOccupancyGrid.h  MultiSparseMap3D.h  SparseMap3D.h  VerticalOccupancyGridList.h
uav_simulator/Utils/multi_map_server/quadrotor_msgs/include/quadrotor_msgs/: comm_types.h  decode_msgs.h  encode_msgs.h
uav_simulator/Utils/multi_map_server/quadrotor_msgs/msg_gen/cpp/include/quadrotor_msgs/: AuxCommand.h  Corrections.h  Gains.h  OutputData.h  PPROutputData.h  PositionCommand.h  SO3Command.h  Serial.h  StatusData.h  TRPYCommand.h
uav_simulator/Utils/odom_visualization/: CMakeLists.txt
uav_simulator/Utils/pose_utils/: CMakeLists.txt
uav_simulator/local_sensing/: CMakeLists.txt
uav_simulator/local_sensing/params/: camera.yaml
uav_simulator/local_sensing/src/: AlignError.h  ceres_extensions.h  depth_render_node.cpp  euroc.cpp  helper_math.h  pcl_render_node.cpp  pointcloud_render_node.cpp
uav_simulator/map_generator/: CMakeLists.txt
uav_simulator/map_generator/resource/: apartment.pcd  pillar.pcd  ri_flight.pcd  test_map1.pcd  test_map2.pcd  test_map3.pcd
uav_simulator/map_generator/src/: click_map.cpp  map_publisher.cpp  map_recorder.cpp  random_forest_sensing.cpp
uav_simulator/so3_control/src/: SO3Control.cpp  so3_control_nodelet.cpp
uav_simulator/so3_disturbance_generator/: CMakeLists.txt
uav_simulator/so3_disturbance_generator/src/: so3_disturbance_generator.cpp
(+217 files in other folders)
